<resources>
    <string name="app_name">WAPI</string>
    <string name="password">Mot de passe</string>
    <string name="haveNotAccount"><u>Pas encore inscrit? Inscrivez-vous!</u></string>
    <string name="haveAccount"><u>Déjà inscrit? Connectez-vous!</u></string>
    <string name="connexion">Connexion</string>
    <string name="inscription">Inscription</string>
    <string name="phoneNumber">N° Téléphone</string>
    <string name="finaliser_inscription">Finaliser L\'inscription</string>
    <string name="code">Code</string>
    <string name="renvoyerCode">RENVOYER LE CODE</string>
    <string name="slogan">World Application for Poor\'s more Incomes</string>
    <string name="recevoirCodeConnexion">RECEVOIR LE CODE</string>
    <string name="passwordConfirm">Confirmer le mot de passe</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_formation">Formation</string>
    <string name="title_menage">Ménage</string>
    <string name="title_exploitation">Exploitation</string>

    <string name="compte">Compte</string>
    <string name="title_annonce">Annonce</string>
    <string name="documents">Documents</string>
    <string name="videos">Vidéos</string>
    <string name="vide">Vide</string>
    <string name="achats">Achats</string>
    <string name="ventes">Ventes</string>
    <string name="newAnnonce">Nouvelle Annonce</string>
    <string name="aide">Aide</string>
    <string name="telecharger">Télécharger</string>
    <string name="confirmer">Confirmer</string>
    <string name="publier_annonce">Publier une annonce</string>
    <string name="nom">Nom</string>
    <string name="email">Email</string>
    <string name="nomProduit">Nom du produit</string>
    <string name="lieuVente">Lieu de vente</string>
    <string name="prixUnitaire">Prix unitaire</string>
    <string name="typeAnnonce">Type d\'annonce</string>
    <string name="achat">Achat</string>
    <string name="vente">Vente</string>
    <string name="publier_lannonce">PUBLIER MAINTENANT</string>
    <string name="mon_profil">Mon Profil</string>
    <string name="telephone">Téléphone</string>
    <string name="modifierPassword">Modifier le mot de passe</string>
    <string name="annonces_publiees">Annonces publiées</string>
    <string name="interet_recus">Intérêts reçus</string>
    <string name="interet_enregistres">Intérêts enrégistrés</string>
    <string name="mon_compte">Mon Compte</string>
    <string name="deconnexion">Déconnexion</string>
    <string name="name_empty">Remplissez ce champ</string>
    <string name="details_formation">Détails sur formation</string>
    <string name="title_recherche">Rechercher</string>

    <string-array name="langueValues">
        <item name="langueFrench">French</item>
        <item name="langueEnglish">English</item>
        <item name="langueBariba">Bariba</item>
        <item name="langueBaili">Baili</item>
        <item name="langueGourmantche">Gourmantché</item>
        <item name="langueMore">More</item>
        <item name="langueDjerma">Djerma</item>
        <item name="langueHaoussa">Haoussa</item>
    </string-array>

    <string name="langueMina">Mina</string>
    <string name="langueZerma">Zerma</string>
    <string name="langueFon">Fon</string>
    <string name="langueFrench">French</string>
    <string name="langueEnglish">English</string>
    <string name="langueBariba">Bariba</string>
    <string name="langueBiali">Biali</string>
    <string name="langueGourmantche">Gourmantche</string>
    <string name="langueMore">More</string>
    <string name="langueDjerma">Djerma</string>
    <string name="langueHaoussa">Haoussa</string>
    <string name="choisirLangue">Choisissez une langue  ...</string>
    <string name="title_detail_champs">Détail sur le champs</string>
    <string name="title_new_champs">Nouvelle exploitation</string>
    <string name="valider">valider</string>
    <string name="champs_inactif">Ce champs est inactif pour le moment</string>
    <string name="champs_actif">Ce champs est actif</string>
    <string name="statut_champs">Statut du champs</string>
    <string name="employee_list">Liste des employés du champs</string>
    <string name="delimitation_champs">Délimitation du champs</string>
    <string name="toutes_saisons">Toutes les saisons de culture</string>
    <string name="infos_culture_messsage">Renseignez maintenant les infos sur les cultures</string>
    <string name="infos_culture">Infos Cultures</string>
    <string name="champs_creation_succed">Une nouvelle exploitation a été créé avec succès ...</string>
    <string name="ask_exist_old_culture">Avez vous déjà fait une culture l\'année passée sur ce champs que vous êtes sur le point de créer?</string>
    <string name="oui">Oui</string>
    <string name="non">Non</string>
    <string name="welcome_to_wapi">Bienvenue dans Wapi</string>
    <string name="culture_of">Culture de </string>
    <string name="current_culture">Culture actuelle</string>
    <string name="nombre_employes">Nombre d\'employés :</string>
    <string name="dateSemie">Date de semie</string>
    <string name="superficeChamps">Superficie</string>
    <string name="etapeCulture">Étape</string>
    <string name="title_activity_details_exploitation">DetailsExploitation</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="dernier_module_formation">Ce module est le dernier de cette formation</string>
    <string name="premier_module_formation">Ce module est le premier de cette formation</string>
    <string name="message_choix_langue">Veuillez choisir votre langue en suivant l\'animation</string>
    <string name="coordonnees_geo">Coordo .. Géo</string>
    <string name="employee">Employés</string>
    <string name="saisons">Saisons</string>
    <string name="Saisons">Saisons</string>
    <string name="my_employees">Mes employés</string>
    <string name="add_new_champs_position_message">Vous êtes sur le point de prendre la osition actuelle comme une coordonnée de l\'exploitation. \nVoulez vous  vraiment le faire?</string>
    <string name="download">Télécharger</string>
    <string name="downloaded">Téléchargé</string>
    <string name="downloading">Téléchargement en cours ... </string>
    <string name="please_wait_for_download_and_unziping">Téléchargement en cours. Patientez un instant ...</string>
    <string name="message_validation_formation">Félicitation ! \n Vous avez bel et bien validé la formation.</string>
    <string name="ok">OK</string>
</resources>
