<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:layout_marginLeft="15dp"
    android:layout_marginRight="15dp"
    tools:context=".ui.ChoixLangue">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="30dp"
        android:textSize="16dp"
        android:gravity="center"
        android:textStyle="bold"
        android:textColor="@color/colorGray"
        android:text="@string/message_choix_langue"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:layout_marginTop="15dp"
        android:weightSum="2">
        <TextView
            android:id="@+id/tv_french"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:textSize="18sp"
            android:background="@color/colorGray"
            android:textColor="@color/colorWhite"
            android:layout_marginRight="4dp"
            android:layout_marginLeft="4dp"
            android:textAllCaps="true"
            android:textStyle="bold"
            android:text="@string/langueFrench"/>

        <TextView
            android:id="@+id/tv_english"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:textSize="18sp"
            android:layout_marginRight="4dp"
            android:layout_marginLeft="4dp"
            android:textStyle="bold"
            android:textAllCaps="true"
            android:background="@color/colorGray"
            android:textColor="@color/colorWhite"
            android:gravity="center"
            android:text="@string/langueEnglish"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:layout_marginTop="15dp"
        android:weightSum="2">
        <TextView
            android:id="@+id/tv_bariba"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:textSize="18sp"
            android:layout_marginRight="4dp"
            android:layout_marginLeft="4dp"
            android:background="@color/colorGray"
            android:textColor="@color/colorWhite"
            android:textStyle="bold"
            android:textAllCaps="true"
            android:text="@string/langueBariba"/>

        <TextView
            android:id="@+id/tv_baili"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:textSize="18sp"
            android:textStyle="bold"
            android:textAllCaps="true"
            android:layout_marginRight="4dp"
            android:layout_marginLeft="4dp"
            android:background="@color/colorGray"
            android:textColor="@color/colorWhite"
            android:gravity="center"
            android:text="@string/langueBiali"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:layout_marginTop="15dp"
        android:weightSum="2">
        <TextView
            android:id="@+id/tv_more"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:textSize="18sp"
            android:layout_marginRight="4dp"
            android:layout_marginLeft="4dp"
            android:background="@color/colorGray"
            android:textColor="@color/colorWhite"
            android:textStyle="bold"
            android:textAllCaps="true"
            android:text="@string/langueMore"/>

        <TextView
            android:id="@+id/tv_gourmantche"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:textSize="18sp"
            android:textStyle="bold"
            android:textAllCaps="true"
            android:layout_marginRight="4dp"
            android:layout_marginLeft="4dp"
            android:background="@color/colorGray"
            android:textColor="@color/colorWhite"
            android:gravity="center"
            android:text="@string/langueGourmantche"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:layout_marginTop="15dp"
        android:weightSum="2">
        <TextView
            android:id="@+id/tv_haoussa"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:textSize="18sp"
            android:background="@color/colorGray"
            android:textColor="@color/colorWhite"
            android:layout_marginRight="4dp"
            android:layout_marginLeft="4dp"
            android:textStyle="bold"
            android:textAllCaps="true"
            android:text="@string/langueHaoussa"/>

        <TextView
            android:id="@+id/tv_zerma"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:textSize="18sp"
            android:textStyle="bold"
            android:textAllCaps="true"
            android:background="@color/colorGray"
            android:textColor="@color/colorWhite"
            android:layout_marginRight="4dp"
            android:layout_marginLeft="4dp"
            android:gravity="center"
            android:text="@string/langueZerma"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:layout_marginTop="15dp"
        android:weightSum="2">
        <TextView
            android:id="@+id/tv_fongbe"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:textSize="18sp"
            android:background="@color/colorGray"
            android:textColor="@color/colorWhite"
            android:textStyle="bold"
            android:layout_marginRight="4dp"
            android:layout_marginLeft="4dp"
            android:textAllCaps="true"
            android:text="@string/langueFon"/>

        <TextView
            android:id="@+id/tv_mina"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:textSize="18sp"
            android:textStyle="bold"
            android:textAllCaps="true"
            android:background="@color/colorGray"
            android:textColor="@color/colorWhite"
            android:gravity="center"
            android:layout_marginRight="4dp"
            android:layout_marginLeft="4dp"
            android:text="@string/langueMina"/>
    </LinearLayout>
</LinearLayout>