<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.nouvelleAnnonce.NouvelleAnnonce">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingTop="15dp"
            android:paddingBottom="20dp">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tILName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="15dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingStart="10dp"
                    android:paddingEnd="10dp"
                    android:textSize="16dp"
                    android:hint="@string/nomProduit"/>

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tILLieuVente"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="15dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingStart="10dp"
                    android:paddingEnd="10dp"
                    android:textSize="16dp"
                    android:inputType="textEmailAddress"
                    android:drawableRight="@drawable/ic_email_black_24dp"
                    android:hint="@string/lieuVente"/>

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tILUniteMesure"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="15dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingStart="10dp"
                    android:paddingEnd="10dp"
                    android:textSize="16dp"
                    android:inputType="textPassword"
                    android:drawableRight="@drawable/ic_vpn_key_black_24dp"
                    android:hint="@string/prixUnitaire"/>

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tILPrixUnite"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="15dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingStart="10dp"
                    android:paddingEnd="10dp"
                    android:textSize="16dp"
                    android:inputType="number"
                    android:drawableRight="@drawable/ic_vpn_key_black_24dp"
                    android:hint="@string/passwordConfirm"/>

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tILQuantite"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="15dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingStart="10dp"
                    android:paddingEnd="10dp"
                    android:textSize="16dp"
                    android:inputType="number"
                    android:drawableRight="@drawable/ic_vpn_key_black_24dp"
                    android:hint="@string/passwordConfirm"/>

            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:id="@+id/tvTypeAnnonce"
                android:layout_width="wrap_content"
                android:layout_height="30dp"
                android:layout_marginStart="16dp"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="19dp"
                android:layout_marginEnd="16dp"
                android:layout_marginRight="16dp"
                android:text="@string/typeAnnonce"/>

            <RadioGroup
                android:id="@+id/radioGroup_diffLevel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="7dp"
                android:layout_marginEnd="16dp"
                android:layout_marginRight="16dp"
                android:orientation="horizontal">

                <RadioButton
                    android:id="@+id/radioButton_easy"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="0"
                    android:paddingEnd="20dp"
                    android:text="@string/achat" />

                <RadioButton
                    android:id="@+id/radioButton_medium"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="0"
                    android:paddingEnd="20dp"
                    android:layout_marginStart="20dp"
                    android:text="@string/vente" />

            </RadioGroup>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <Button
                android:id="@+id/btnPublierAnnonce"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:textAllCaps="true"
                android:layout_marginStart="15dp"
                android:layout_marginEnd="15dp"
                android:background="@color/colorPrimary"
                android:textColor="@color/colorWhite"
                android:textStyle="bold"
                android:layout_marginBottom="33dp"
                android:layout_alignParentBottom="true"
                android:text="@string/publier_lannonce"/>
        </LinearLayout>

    </LinearLayout>





</ScrollView>