<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:paddingTop="33dp"
    android:orientation="vertical"
    tools:context=".ui.confirmCode.ConfirmCodeActivity">


    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/app_icon"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_gravity="center"
        android:layout_marginBottom="11dp"
        android:src="@drawable/index" />


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tILConfirmCode"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="15dp">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"
            android:textSize="16dp"
            android:drawableRight="@drawable/ic_vpn_key_black_24dp"
            android:hint="@string/code"/>

    </com.google.android.material.textfield.TextInputLayout>


    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="22dp"
        android:layout_marginBottom="11dp"
        android:visibility="invisible"/>


    <Button
        android:id="@+id/btnInscription"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:textAllCaps="true"
        android:layout_margin="15dp"
        android:background="@color/colorPrimary"
        android:textColor="@color/colorWhite"
        android:textStyle="bold"
        android:text="@string/confirmer"/>

    <Button
        android:id="@+id/btnSendCodeAgain"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:textAllCaps="true"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp"
        android:layout_marginTop="33dp"
        android:background="@color/colorRed"
        android:textColor="@color/colorWhite"
        android:textStyle="bold"
        android:visibility="invisible"
        android:text="@string/renvoyerCode"/>

</LinearLayout>